# deprecated-observable

./: .gitignore  README.md  deprecated-observable.cabal  observable.cabal
src/: Examples.hs  Observable.hs
src/Observable/: Core.hs  Examples.hs  MCMC.hs  Sampler.hs  Types.hs
src/Observable/MCMC/: AffineInvariantEnsemble.hs  Anneal.hs  Hamiltonian.hs  MALA.hs  MetropolisHastings.hs  NUTS.hs  Slice.hs
test/: TestSuite.hs  traces.r
