name:                observable
version:             0.1.0.0
synopsis:            An embedded DSL for working with sampling functions.
description:         An embedded DSL for working with sampling functions.
homepage:            http://github.com/jtobin/observable
license:             BSD3
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Observable.Core,
                       Observable.MCMC

  other-extensions:    ExistentialQuantification,
                       RankNTypes,
                       BangPatterns

  build-depends:       base       >= 4.6,
                       async      >= 2.0,
                       primitive  >= 0.5,
                       mtl        >= 2.1,
                       pipes      >= 4.0,
                       mwc-random >= 0.12,
                       vector     >= 0.10,
                       statistics >= 0.10

  hs-source-dirs:      src

  default-language:    Haskell2010

Test-Suite test-suite
  type:                exitcode-stdio-1.0 
  hs-source-dirs:      src, test
  main-is:             TestSuite.hs
  build-depends:       base       >= 4.6,
                       async      >= 2.0,
                       primitive  >= 0.5,
                       mtl        >= 2.1,
                       pipes      >= 4.0,
                       mwc-random >= 0.12,
                       vector     >= 0.10,
                       statistics >= 0.10

